[package]
name = "postgres-ical"
version = "0.1.0"
authors = ["Edgar Onghena <dev@edgar.bzh>"]
license = "UNLICENSED"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["pg13"]
pg10 = ["pgx/pg10", "pgx-tests/pg10"]
pg11 = ["pgx/pg11", "pgx-tests/pg11"]
pg12 = ["pgx/pg12", "pgx-tests/pg12"]
pg13 = ["pgx/pg13", "pgx-tests/pg13"]
pg14 = ["pgx/pg14", "pgx-tests/pg14"]
pg_test = []

[dependencies]
chrono = "0.4.19"
curl = "0.4.42"
postgres-ical-parser = { path = "postgres-ical-parser" }
log = "0.4.14"
pgx = "0.3.3"
pgx-named-columns = "0.1.0"
pgx-macros = "0.3.3"
pipe = "0.4.0"
time = "0.3.7"

[dev-dependencies]
pgx-tests = "0.3.3"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[workspace]
members = ["postgres-ical-parser"]
