[package]
name = "postgres-ical"
version = "0.1.0"
authors = ["Edgar Onghena <dev@edgar.bzh>"]
license = "UNLICENSED"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_postgres-ical"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg13"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
chrono = "0.4.19"
curl = "0.4.42"
postgres-ical-parser = { path = "postgres-ical-parser" }
pgrx = "0.13.1"
pgrx-named-columns = "0.2.0"
pipe = "0.4.0"
time = "0.3.7"

[dev-dependencies]
pgrx-tests = "0.13.1"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1

[workspace]
members = ["postgres-ical-parser"]
